// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-ortto destination: enterAudience action - all fields 1`] = `
Array [
  Object {
    "anonymous_id": "r8v#u",
    "audience_id": "r8v#u",
    "enable_batching": true,
    "ip": "14.62.208.75",
    "location": Object {
      "city": "r8v#u",
      "country": "r8v#u",
      "post_code": "r8v#u",
      "state": "r8v#u",
    },
    "message_id": "r8v#u",
    "timestamp": "2049-01-25T20:52:16.768Z",
    "traits": Object {
      "email": "he@pev.vc",
      "first_name": "r8v#u",
      "last_name": "r8v#u",
      "phone": "r8v#u",
    },
    "user_id": "r8v#u",
  },
]
`;

exports[`Testing snapshot for actions-ortto destination: enterAudience action - required fields 1`] = `
Array [
  Object {
    "anonymous_id": "r8v#u",
    "audience_id": "r8v#u",
    "message_id": "r8v#u",
    "user_id": "r8v#u",
  },
]
`;

exports[`Testing snapshot for actions-ortto destination: trackActivity action - all fields 1`] = `
Array [
  Object {
    "anonymous_id": "]25AcEh01MO",
    "audience_id": "]25AcEh01MO",
    "enable_batching": true,
    "event": "]25AcEh01MO",
    "ip": "107.255.187.198",
    "location": Object {
      "city": "]25AcEh01MO",
      "country": "]25AcEh01MO",
      "post_code": "]25AcEh01MO",
      "state": "]25AcEh01MO",
    },
    "message_id": "]25AcEh01MO",
    "namespace": "]25AcEh01MO",
    "properties": Object {
      "testType": "]25AcEh01MO",
    },
    "timestamp": "2125-06-22T08:21:01.417Z",
    "traits": Object {
      "email": "vepaj@apzujhuw.sm",
      "first_name": "]25AcEh01MO",
      "last_name": "]25AcEh01MO",
      "phone": "]25AcEh01MO",
    },
    "user_id": "]25AcEh01MO",
  },
]
`;

exports[`Testing snapshot for actions-ortto destination: trackActivity action - required fields 1`] = `
Array [
  Object {
    "anonymous_id": "]25AcEh01MO",
    "audience_id": "]25AcEh01MO",
    "event": "]25AcEh01MO",
    "message_id": "]25AcEh01MO",
    "user_id": "]25AcEh01MO",
  },
]
`;

exports[`Testing snapshot for actions-ortto destination: upsertContactProfile action - all fields 1`] = `
Array [
  Object {
    "anonymous_id": "TBOtXZm4yQy]54s",
    "audience_id": "TBOtXZm4yQy]54s",
    "enable_batching": false,
    "ip": "169.155.93.138",
    "location": Object {
      "city": "TBOtXZm4yQy]54s",
      "country": "TBOtXZm4yQy]54s",
      "post_code": "TBOtXZm4yQy]54s",
      "state": "TBOtXZm4yQy]54s",
    },
    "message_id": "TBOtXZm4yQy]54s",
    "timestamp": "2086-08-12T02:15:40.692Z",
    "traits": Object {
      "email": "cu@wolpawwe.me",
      "first_name": "TBOtXZm4yQy]54s",
      "last_name": "TBOtXZm4yQy]54s",
      "phone": "TBOtXZm4yQy]54s",
    },
    "user_id": "TBOtXZm4yQy]54s",
  },
]
`;

exports[`Testing snapshot for actions-ortto destination: upsertContactProfile action - required fields 1`] = `
Array [
  Object {
    "anonymous_id": "TBOtXZm4yQy]54s",
    "audience_id": "TBOtXZm4yQy]54s",
    "message_id": "TBOtXZm4yQy]54s",
    "user_id": "TBOtXZm4yQy]54s",
  },
]
`;
